cursive-bootstrap/tests/ui/E-SEM/E-SEM-2801.cursive
// RUN: compile-fail
// DIAG: E-SEM-2801
// SPEC: 8.17
// DESC: Contract predicate not provable outside [[dynamic]] scope

procedure with_contract(x: i32) -> ()
    |= x > 0  //~ ERROR E-SEM-2801: contract not provable
{
    return ()
}

procedure call_without_proof() -> () {
    with_contract(-1)
    return ()
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
